Changes
=======

2.5.2 (unreleased)
------------------

- Nothing changed yet.


2.5.1 (2016-02-24)
------------------

- Add ability to exclude more than one module or package using
  ``<grok:grok exclude="<names>" />`` and allow to use unix shell-style
  wildcards within. (Backport of this feature from version 2.7)


2.5 (2012-05-01)
----------------

- Introduce provideUtility, providerAdapter, provideSubscriptionAdapter,
  provideHandler and provideInterface in grokcore.component. These by default
  delegate the registration of components to the global site manager like
  was done before, but provide the possibility for custom registries for the
  grokked components.

- Fix the `global_adapter` to properly use information annotated by
  ``grok.adapter``, and using the IContext object if it was not
  specified. (Fix Launchpad issue #960097).

- Add a ``key`` option to ``sort_components`` that behave like ``key``
  options available on standard Python sort methods.

2.4 (2011-04-27)
----------------

- Fix the `global_adapter` directive implementation to accept an explicit
  "empty" name for nameless adapter registrations (as it used to be that
  providing an empty name in the registration would actually result in
  registering a named adapter in case the factory has a `grok.name`).

2.3 (2011-02-14)
----------------

- Implement the generic (Multi)Subscriptions components.

2.2 (2010-11-03)
----------------

- The default values computation for the context directive and the provides
  directive is now defined in the directives themselves. This means that where
  the values for these directives is being retrieved, the "default_context"
  function does not need to be passed along anymore for general cases.

  Analogous to this, when getting values for the provides directive the
  "default_provides" function does not need to be passed along in the general
  case.

2.1 (2010-11-01)
----------------

* Made package comply to zope.org repository policy.
