@@ -4,14 +4,15 @@ If the grok.order directive is specified with other classes that don't
 have the order specified, then the order will be determined by first
 sorting on the order specified, and then by the definition order.
 
-  >>> components = [First(), Second(), Third(), Fourth(), Fifth()]
+  >>> components = [First(), Second(), Third, Fourth(), Fifth(), six]
 
   >>> from grokcore.component import sort_components
   >>> sort_components(components)
-  [<...Third object at ...>,
+  [<class '...Third'>,
    <...Fourth object at ...>,
    <...Second object at ...>,
    <...Fifth object at ...>,
+   <function six at ...>,
    <...First object at ...>]
 
 """
@@ -19,7 +20,7 @@ sorting on the order specified, and then by the definition order.
 import grokcore.component as grok
 
 class First(object):
-    grok.order(2)
+    grok.order(5)
 
 class Second(object):
     grok.order(1)
@@ -32,3 +33,7 @@ class Fourth(object):
 
 class Fifth(object):
     grok.order(1)
+
+@grok.order(2)
+def six():
+    pass
